# peterfetch

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  cmake_test_discovery_1d87587e9f.json  cmake_test_discovery_48f020e122.json  flake.nix
.github/workflows/: cmake.yaml  nix.yaml
cmake/: args.cmake  cpr.cmake  json.cmake  xml.cmake
include/: artwork.hpp  cli_args.hpp  config.hpp.in  directory_info.hpp  http_client.hpp  iter_utils.hpp  layout.hpp  section.hpp  weather_info.hpp
meta/: build.sh  run.sh  test.sh
nix/: package.nix
src/: artwork.cpp  directory_info.cpp  http_client.cpp  iter_utils.cpp  layout.cpp  main.cpp  section.cpp  section_list.cpp  weather_info.cpp
tests/: CMakeLists.txt  directory_info.cpp  directory_info_test.cpp  iter_utils_test.cpp  weather_info_test.cpp
